# filterpy2

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg  setup.py
docs/: conf.py
filterpy2/: __init__.py
filterpy2/common/: __init__.py  helpers.py  kinematic.py
filterpy2/discrete_bayes/: __init__.py  discrete_bayes.py
filterpy2/gh/: __init__.py  gh_filter.py
filterpy2/hinfinity/: __init__.py  hinfinity_filter.py
filterpy2/kalman/: CubatureKalmanFilter.py  EKF.py  IMM.py  UKF.py  ensemble_kalman_filter.py  fading_memory.py  fixed_lag_smoother.py  information_filter.py  kalman_filter.py  mmae.py  sigma_points.py  square_root.py  unscented_transform.py
filterpy2/leastsq/: least_squares.py
filterpy2/memory/: __init__.py  fading_memory.py
filterpy2/monte_carlo/: __init__.py
filterpy2/stats/: stats.py
tests/unit/common/: test_discretization.py  test_helpers.py
tests/unit/discrete_bayes/: test_discrete_bayes.py
tests/unit/gh/: test_gh.py
tests/unit/hinfinity/: test_hinfinity.py
tests/unit/kalman/: test_ckf.py  test_ekf.py  test_enkf.py  test_fls.py  test_fm.py  test_imm.py  test_information.py  test_kf.py  test_mmae.py  test_rts.py  test_sensor_fusion.py  test_sqrtkf.py  test_ukf.py
tests/unit/leastsq/: test_lsq.py
tests/unit/memory/: test_fading_memory.py
tests/unit/stats/: test_stats.py
