[tool.poetry]
name = "filterpy2"
version = "2.0.0a0"
description = "Filterpy refactored with types and using Poetry"
authors = ["Rlabbe <rlabbejr@gmail.com>"]
license = "LICENSE"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
coverage = "^7.6.2"
matplotlib = "^3.9.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
